--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Samuel Korkoyah | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -46,12 +46,12 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">John Doe</span>
+          Hi, my name is <span class="text-color-main">Samuel Korkoyah</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Developer you need.
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Hire Me</a>
         </p>
       </div>
     </div>
@@ -70,7 +70,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.png"
+                src="./assets/profile_photo.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -78,19 +78,30 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                
+              I'm an aspiring full stack developer. I attended the University 
+              of Massachusetts, Dartmouth where I majored Biochemistry until 
+              the start of my junior year. During the course of my college career, 
+              I found that I really enjoyed developing web applications. Being able 
+              to understand the entire process from application design to deployment 
+              was and still is extremely rewarding. I have taken it upon myself to 
+              learn all there is to know about web development. I am very excited to 
+              learn more and to continue cultivating new skills in this ever growing 
+              industry. I am a strong believer that continuous learning is the key to 
+              a better future. As such, I pride myself for being in a field that is 
+              always changing and as a byproduct, always pushing me to grow as an individual 
+              and as a developer.
               </p>
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                Faced with many challenging responsibilities, I have learned many important 
+                skills such as problem solving, troubleshooting, communication, teamwork, 
+                collaboration, and professionalism. I am relieved to say that the value of 
+                these skills will not be lost in my transition to web development. Using 
+                everything I have learned, I hope that I will be able to help grow this industry
+                 and the community surrounding it.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/10b0tR1ErDQeHb-o7pQAKkcU-eIPUHLdF/view?usp=sharing">
                   View Resume
                 </a>
               </span>
@@ -113,20 +124,24 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">SmartBrain</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Using the Clarafai API, smartbrain takes an image URL and 
+                    detects the face of a person within the image. On the 
+                    front-end, smartbrain uses JavaScript, and Reactjs to render 
+                    the views. On the back-end, it uses Node and Express. Several 
+                    Express routes were implemented to handle request from the 
+                    front-end, such as authentication, user profile, user entries 
+                    update, and etc...  Also used PostgresSQL to save user data, 
+                    and node package (Knex) to query the database and send a response 
+                    to the client.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://skorkoyah.github.io/smartbrain/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/skorkoyah/smartbrain">
                   Source Code
                 </a>
               </div>
@@ -135,7 +150,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/banner.png" />
+                    <img class="img-fluid" src="./assets/localhost_3000_(Laptop with touch).png" />
                   </div>
                 </a>
               </div>
@@ -147,20 +162,19 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Jammming</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Using the Spotify API, Jammming allows users to search 
+                    the Spotify library, create a custom playlist, then save 
+                    it to their Spotify account. Jammming uses JavaScript and 
+                    Reactjs to render the views on the front-end.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://jammming-skorkoyah.surge.sh/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/skorkoyah/jammming">
                   Source Code
                 </a>
               </div>
@@ -169,7 +183,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/banner.png" />
+                    <img class="img-fluid" src="./assets/jammming2.png" />
                   </div>
                 </a>
               </div>
@@ -181,20 +195,20 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Ravenous</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Ravenous gives users read-only access to businesses informations 
+                    based on a specific search term and location of the business. 
+                    Also allows users to sort data based on match, reviews, and 
+                    ratings. Ravenous uses JavaScript and Reactjs on the front-end 
+                    to render the views, and the Yelp API to fetch business informations.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://skorkoyah.github.io/ravenous/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/skorkoyah/ravenous">
                   Source Code
                 </a>
               </div>
@@ -203,7 +217,37 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/banner.png" />
+                    <img class="img-fluid" src="./assets/ravenous2.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Project Start</h3>
+                <div>
+                  <p class="mb-4">
+                    This project was built using html, and custom CSS to showcase my 
+                    knowledge of layouts, positioning, and responsive design.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://skorkoyah.github.io/project_start.github.io/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/skorkoyah/project_start.github.io">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/project_start.png" />
                   </div>
                 </a>
               </div>
@@ -223,13 +267,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            Let's Work Together
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:skorkoyah1994@gmail.com"
+            >Send Email</a
           >
         </div>
       </div>
@@ -243,16 +287,10 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/samuel-korkoyah-88866b168/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/skorkoyah?tab=repositories" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -267,31 +305,10 @@
             class="fa fa-heart px-2"
           ></i>
           by
-          <a href="https://github.com/covidev" target="_blank">Jacobo Martínez</a>
+          <a href="https://github.com/covidev" target="_blank">Samuel Korkoyah</a>
           </a>
         </p>
 
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
       </div>
     </footer>
     <!-- /END Footer Section -->
