--- a/src/template.html
+++ b/src/template.html
@@ -48,10 +48,10 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Samuel Korkoyah</span>
           <br />
-          I'm the Developer you need.
+          I'm a Full Stack Software Engineer
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Hire Me</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Learn More</a>
         </p>
       </div>
     </div>
